Fixed some API responses to return more useful data
