# fnapi/rpc/rpc.swagger.json
@@ -156,12 +156,7 @@
       }
     },
     "rpcCreateResp": {
-      "type": "object",
-      "properties": {
-        "link": {
-          "type": "string"
-        }
-      }
+      "type": "object"
     },
     "rpcDeleteReq": {
       "type": "object",
@@ -198,18 +193,17 @@
       "properties": {
         "name": {
           "type": "string"
-        },
-        "limited": {
-          "type": "boolean",
-          "format": "boolean"
         }
       }
     },
     "rpcGetResp": {
       "type": "object",
       "properties": {
-        "function": {
-          "$ref": "#/definitions/rpcFunction"
+        "name": {
+          "type": "string"
+        },
+        "lang": {
+          "type": "string"
         },
         "version": {
           "type": "string",
@@ -243,12 +237,7 @@
       }
     },
     "rpcUpdateResp": {
-      "type": "object",
-      "properties": {
-        "link": {
-          "type": "string"
-        }
-      }
+      "type": "object"
     }
   }
 }
